sort.dutchflag.DutchFlagAlgo.scala.error
Compilation error:
DutchFlagAlgo:10: error: '{' expected but 'case' found.
    case ROUGE =>
    ^DutchFlagAlgo:16: error: '}' expected but 'case' found.
    case BLEU =>
    ^DutchFlagAlgo:19: error: '}' expected but 'case' found.
    case BLANC =>
    ^DutchFlagAlgo:23: error: eof expected but '}' found.
}
^